重构实现，支持无感知语法糖